[gd_scene load_steps=5 format=3 uid="uid://nxfhepak18cv"]

[ext_resource type="PackedScene" uid="uid://dvdtdj1y8t544" path="res://player.tscn" id="1_8q4ej"]
[ext_resource type="Script" path="res://main.gd" id="1_8t1qw"]
[ext_resource type="PackedScene" uid="uid://lvbpba0wh0ut" path="res://enemy.tscn" id="2_t8uha"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ob5ga"]
vertices = PackedVector2Array(946, 726, -50, 784, -114, 177, 685, -69)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-125, 170, -60, 795, 960, 736, 691, -82)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Main" type="Node"]
script = ExtResource("1_8t1qw")
mob_scene = ExtResource("2_t8uha")

[node name="Player" parent="." instance=ExtResource("1_8q4ej")]

[node name="Enemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_t8uha")]
position = Vector2(161, 374)
player = NodePath("../Player")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.484

[node name="ScoreTimer" type="Timer" parent="."]
editor_description = "where does this text go"

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(252, 245)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_ob5ga")

[node name="Enemy2" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_t8uha")]
position = Vector2(322, 748)
speed = 27.5
player = NodePath("../Player")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
